ext/psip/build_master_log_6.txt
[ 16%] Built target opensrtp
[ 26%] Built target SipPlatform
[ 27%] Built target XmlParser
[ 31%] Built target HttpParser
[ 34%] Built target StunParser
[ 40%] Built target SdpParser
[ 57%] Built target TcpStack
[ 59%] Built target SipParser
[ 61%] Built target HttpStack
[ 77%] Built target SipStack
[ 81%] Built target ServerPlatform
[ 85%] Built target TestWebRtcVideo
[ 86%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/RtpDirection.cpp.o
[ 86%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/SipCdr.cpp.o
[ 87%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/SipDialog.cpp.o
[ 88%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/SipRegisterThread.cpp.o
[ 88%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/SipServerInfo.cpp.o
[ 89%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/SipUserAgentCallBack.cpp.o
[ 89%] Building CXX object CMakeFiles/SipUserAgent.dir/SipUserAgent/SipUserAgent.cpp.o
In file included from /mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipUserAgent/SipUserAgent.cpp:33:
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipUserAgent/SipUserAgentSend.hpp: In member function ?쁞ool CSipUserAgent::SendNotify(const char*, int)??
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipUserAgent/SipUserAgentSend.hpp:89:108: error: ?쁆etReasonPhrase??was not declared in this scope; did you mean ?쁓ipGetReasonPhrase??
   89 |                 pclsRequest->m_iContentLength = snprintf( szBuf, sizeof(szBuf), "SIP/2.0 %d %s", iSipCode, GetReasonPhrase( iSipCode ) );
      |                                                                                                            ^~~~~~~~~~~~~~~
      |                                                                                                            SipGetReasonPhrase
gmake[2]: *** [CMakeFiles/SipUserAgent.dir/build.make:146: CMakeFiles/SipUserAgent.dir/SipUserAgent/SipUserAgent.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:424: CMakeFiles/SipUserAgent.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
